      is not a VDB.
    - Added a houdini_utils::OpFactory::setInvisible() method to hide nodes
      from tab menus.
    - Added methods to store parent name and visibility of native SOPs to
      @b openvdb_houdini::OpenVDBOpFactory.
    - Added a houdini_utils::OpPolicy::getTabSubMenuPath() method to allow
      OpPolicy subclasses to provide their own tab sub-menu path.


Version 6.1.0 - May 8, 2019

      As of this release, the oldest supported Houdini version is 16.5.

    New features:
    - Added new QuatTraits, MatTraits and ValueTraits type traits to complement
      VecTraits and added an IsSpecializationOf helper metafunction.
    - Added support for Vec4s, Vec4d and Vec4i metadata.
    - Added a generic TypeList class.
    - Added GridBase::apply(), which invokes a functor on a grid
      if the resolved grid type is a member of a given type list.
    - Added util::printTime(), which outputs nicely formatted time information.
    - Added a std::hash<Coord> template specialization.
    - Added CoordBBox::moveMin() and CoordBBox::moveMax() to move a CoordBBox.

    Improvements:
    - util::CpuTimer now makes use of util::printTime() for nicer output,
      and its API has been improved.
    - Significantly improved the performance of point data grid string
      attribute generation.
    - AttributeArray::copy() and the copy assignment operator for
      AttributeArrays are now thread-safe.
    - The command-line tools (vdb_print, etc.) now include the library
      ABI version in their -version output.
    - Further improved the responsiveness of the mesh to volume converter
      to interrupt requests.
    - The CMake build system has been significantly improved to support a
      wider range of build options and use cases. This includes better
      dependency handling and status reporting, find module installation for
      external use, more robust handling of different platform configurations