@@ -59,6 +59,7 @@ Houdini:
   @b openvdb_houdini::OpenVDBOpFactory.
 - Added a houdini_utils::OpPolicy::getTabSubMenuPath() method to allow
   OpPolicy subclasses to provide their own tab sub-menu path.
+- OpenVDB SOPs are now displayed in the ASWF tab sub-menu.
 
 
 @htmlonly <a name="v6_1_0_changes"></a>@endhtmlonly
